--- a/css3d-engine-master/example/pano.html
+++ b/css3d-engine-master/example/pano.html
@@ -20,7 +20,8 @@
         color: "#cccccc"
     }).update();
     document.getElementById('main').appendChild(s.el);
-
+	var box = new C3D.Sprite();
+	s.addChild(box);
     //创建1个立方体放入场景
     var c = new C3D.Skybox();
     c.size(1024).position(0, 0, 0).material({
@@ -32,8 +33,13 @@
         down: {image: "images/cube_DN.jpg"},
 
     }).update();
-    s.addChild(c);
-
+    box.addChild(c);
+    //创建1个平面放入场景
+    var p = new C3D.Plane();
+    p.name('ppp').size(300).position(200, 200, -s.fov).rotation(0, 0, 180).material({
+        color: C3D.getRandomColor()
+    }).id('bbb').update();
+    box.addChild(p);
     //响应屏幕调整尺寸
     function resize() {
         s.size(window.innerWidth, window.innerHeight).update();
@@ -51,9 +57,9 @@
             };
 
     function go() {
-//            c.rotate(0, 0.1, 0).updateT();
+           box.rotate(0, 0.1, 0).updateT();
 
-        s.camera.rotate(0, 0.3, 0).updateT();
+       // s.camera.rotate(0, 0.3, 0).updateT();
 
         requestAnimationFrame(go);
     }
