--- a/three.js/lesson1/lesson1.html
+++ b/three.js/lesson1/lesson1.html
@@ -9,23 +9,23 @@
 		</style>
 	</head>
 	<body>
-		<script src="three.js"></script>
+		<script src="../js/three.js"></script>
 		<script>
 			//three.js三要素是： 场景，  摄像机， 渲染器
 			
 			//场景，
 			var scene = new THREE.Scene();
 			//摄像机，
-			/*
-				透视摄像机
-				参数： 视角， 宽高比， 最近切面距离，最远切面距离
-			*/
+
 			// 创建一个立方体，并添加到场景
 			var geometry = new THREE.BoxGeometry(1,1,1);
 			var material = new THREE.MeshBasicMaterial({color:0x00ff00});
 			var cube = new THREE.Mesh(geometry, material);
 			scene.add(cube);
-			
+            /*
+                透视摄像机
+                参数： 视角， 宽高比， 最近切面距离，最远切面距离
+            */
 			var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
 			camera.position.z = 5;
 			//渲染器
