--- a/three.js/lesson3/point-light.html
+++ b/three.js/lesson3/point-light.html
@@ -28,7 +28,7 @@
 				renderer.setClearColor(new THREE.Color(0xEEEEEE, 1.0));
 				renderer.setSize(window.innerWidth, window.innerHeight);
 				renderer.shadowMap.enabled = true;
-                renderer.shadowMap.type = THREE.PCFSoftShadowMap; //THREE.PCFSoftShadowMap;
+                //renderer.shadowMapEnabled = true;
 
 				// create the ground plane
 				var planeGeometry = new THREE.PlaneGeometry(60, 20, 1, 1);
@@ -87,18 +87,48 @@
 				scene.add(ambientLight)
 
 				// add spotlight for the shadows
+
+				/**
+				 * SpotLight 具有锥形效果的光源（手电筒）
+				 * castShadow  true这个光源就会生成阴影
+				 * shadowCameraNear 近点 从距离光源的哪一点开始可以生成阴影
+				 * shadowCameraFar 远点 从距离光源的哪一点开始可以生成阴影
+				 * shadowCameraFov 投影视场 用于生成阴影的视场有多大
+				 * target 目标 决定光照的方向
+				 * */
 				var spotLight = new THREE.SpotLight(0xffffff);
 				spotLight.position.set(-40, 60, -10);
 				spotLight.castShadow = true;
-                spotLight.visible = true;
+                spotLight.visible = false;
                 spotLight.target = plane;
 				scene.add(spotLight);
+
+
+				// add point light
+				var pointColor = "#ccffcc";
+				var pointLight = new THREE.PointLight(pointColor);
+				pointLight.distance = 100;
+				pointLight.intensity = 2.5;
+				scene.add(pointLight);
+
+				// add s mall sphere simulating the pointlight
+				var sphereLight = new THREE.SphereGeometry(0.2);
+				var sphereLightMaterial = new THREE.MeshBasicMaterial({color:0xac6c25});
+				var sphereLightMesh = new THREE.Mesh(sphereLight, sphereLightMaterial);
+				sphereLightMesh.castShadow = true;
+
+				sphereLightMesh.position = new THREE.Vector3(3, 0, 3);
+				scene.add(sphereLightMesh);
+
+
 
                 // add the output of the renderer to the html element
                 document.getElementById("WebGL-output").appendChild(renderer.domElement);
 
                 render();
                 var step = 0;
+                var invert = 1;
+                var phase = 0;
                 function render() {
                     stats.update();
                     // totate the cube around its axes
@@ -109,6 +139,24 @@
 					step += 0.03;
 					sphere.position.x = 20 + (10 * Math.cos(step));
 					sphere.position.y = 2 + (10 * Math.abs(Math.sin(step)));
+
+                    // move the light simulation
+                    if (phase > 2 * Math.PI) {
+                        invert = invert * -1;
+                        phase -= 2 * Math.PI;
+                    } else {
+                        phase += 0.03;
+                    }
+                    sphereLightMesh.position.z = +(7 * (Math.sin(phase)));
+                    sphereLightMesh.position.x = +(14 * (Math.cos(phase)));
+                    sphereLightMesh.position.y = 5;
+
+                    if (invert < 0) {
+                        var pivot = 14;
+                        sphereLightMesh.position.x = (invert * (sphereLightMesh.position.x - pivot)) + pivot;
+                    }
+
+                    pointLight.position.copy(sphereLightMesh.position);
 
 					requestAnimationFrame(render);
 					renderer.render(scene, camera);
