--- a/three.js/lesson7-geometry/geometries.html
+++ b/three.js/lesson7-geometry/geometries.html
@@ -100,9 +100,11 @@
          radius — 球体半径，默认为1。
          widthSegments — 水平分段数（沿着经线分段），最小值为3，默认值为8。
          heightSegments — 垂直分段数（沿着纬线分段），最小值为2，默认值为6。
-         phiStart — 指定水平（经线）起始角度，默认值为0。。
+         phiStart — 指定水平（经线）起始角度，默认值为0.
+         |----------------(0为x轴反方向， PI/2 为z抽正方向， PI为x轴正方向， 3PI/2为z轴反方向)------------|
          phiLength — 指定水平（经线）扫描角度的大小，默认值为 Math.PI * 2。
          thetaStart — 指定垂直（纬线）起始角度，默认值为0。
+         |----------------------------(从y轴正方向到y轴反方向)------------------------------------|
          thetaLength — 指定垂直（纬线）扫描角度大小，默认值为 Math.PI。
          该几何体是通过扫描并计算围绕着Y轴（水平扫描）和X轴（垂直扫描）的顶点来创建的。 因此，不完整的球体（类似球形切片）
          可以通过为phiStart，phiLength，thetaStart和thetaLength设置不同的值来创建， 以定义我们开始（或结束）计算这些顶点的起点（或终点）。
