--- a/three.js/lesson1/lesson1.2.html
+++ b/three.js/lesson1/lesson1.2.html
@@ -12,7 +12,7 @@
 		<script src="../js/three.js"></script>
 		<script>
 			//three.js三要素是： 场景，  摄像机， 渲染器
-			
+			var aspect =  window.innerWidth / window.innerHeight;
 			//场景，
 			var scene = new THREE.Scene();
 			//摄像机，
@@ -25,13 +25,20 @@
 				near — 摄像机视锥体近端面
 				far — 摄像机视锥体远端面
             */
-			var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+			var camera = new THREE.PerspectiveCamera(45, aspect, 0.1, 1000);
 			camera.position.z = 5;
 			//渲染器
 			
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setClearColor(0xEEEEEE);
 			renderer.setSize(window.innerWidth, window.innerHeight);
+
+            var cameraSmall = new THREE.PerspectiveCamera(45,aspect, 0.1, 1000);
+            cameraSmall.position.z = 50;
+			var rendererSmall = new THREE.WebGLRenderer();
+            rendererSmall.setClearColor(0xEEEEEE);
+			rendererSmall.setSize(200, 200/aspect);
+
 
 			// 坐标轴
 			/**
@@ -111,13 +118,24 @@
 			camera.position.x = 10;
 			camera.position.y = 20;
 			camera.position.z = 30;
-
 			camera.lookAt(scene.position);
 
+			//小相机
+            cameraSmall.position.x = 10;
+            cameraSmall.position.y = 20;
+            cameraSmall.position.z = 30;
+            cameraSmall.lookAt(scene.position);
+
 			document.body.appendChild(renderer.domElement);
+			document.body.appendChild(rendererSmall.domElement);
+            rendererSmall.domElement.style.position = "fixed";
+            rendererSmall.domElement.style.bottom = "3px";
+            rendererSmall.domElement.style.left = "3px";
+            rendererSmall.domElement.style.border ="1px solid red";
 			
 			//渲染场景
 			renderer.render(scene, camera);
+            rendererSmall.render(scene, cameraSmall);
 		</script>
 	</body>
 </html>
