--- a/dataStruct/list.html
+++ b/dataStruct/list.html
@@ -31,6 +31,6 @@
     <li class="item"></li>
 </ul>
 
-<script src="5-graph/5-dijkstra.js"></script>
+<script src="4-tree/2-binaryTree.js"></script>
 </body>
 </html>
