--- a/html/table.html
+++ b/html/table.html
@@ -45,9 +45,31 @@
         }
 
     </style>
+
+    <style type="text/css">
+        section    {
+            margin-top: 13px;
+            margin-bottom: 87px;
+        }
+
+        header {
+            margin-top: 87px;
+        }
+
+        footer {
+            margin-bottom: 13px;
+        }
+    </style>
+
+
+
 </head>
 <body>
-
+<section>
+    <header>上边界重叠 87</header>
+    <main></main>
+    <footer>下边界重叠 87 不能再高了</footer>
+</section>
 <table class="discount-table">
     <colgroup>
         <col width="20%" />
