--- a/test/time.html
+++ b/test/time.html
@@ -3,14 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        <!-- 垂直居中 -->
+        .container {
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgba(0,0,0,.5);
+            text-align: center;
+            font-size: 0; /*line-height:0, */
+            white-space: nowrap;
+            overflow: auto;
+        }
+
+        .container:after {
+            content: '';
+            display: inline-block;
+            height: 100%;
+            vertical-align: middle;
+        }
+
+        .dialog {
+            display: inline-block;
+            vertical-align: middle;
+            text-align: left;
+            font-size: 14px;
+            white-space: normal;
+        }
+
+    </style>
 </head>
 <body>
+<div class="container">
+    <div class="dialog">
+        dddddd
+    </div>
+</div>
 <div id="myDiv">
     <label for="set"><input id="set" value="0"></label>
     <button id="btn">开始</button>
     <button id="reset">重置</button>
 </div>
 <script>
+
 
     function noop() {
 
